feat: better error handling
